# autodos

./: .gitignore  README.md  main.py  pyproject.toml
autodos/: __init__.py  attack.py  config.py
autodos/agents/: __init__.py  base_agent.py  breadth_expansion.py  deep_backtracking.py  judge.py  optimize.py  target.py
configs/: gpt4free_deepseek.yaml  openai_attack.yaml
